# cpp.gsn.node

./: .gitignore  CMakeLists.txt  reset_compiler.py
clients/forge/: CMakeLists.txt  entry.cpp  forge.cpp  forge.hpp
docs/: prototype_dvsp_1.0.md
nodes/org/: CMakeLists.txt  entry.cpp
nodes/root/: CMakeLists.txt  entry.cpp  http_service.cpp  http_service.hpp  http_session.cpp  http_session.hpp  protocol_handler.cpp  protocol_handler.hpp  resolution_service.cpp  resolution_service.hpp
nodes/trusted/: CMakeLists.txt  entry.cpp
shared/: CMakeLists.txt  activity.cpp  activity_log.cpp  crypto.cpp  log_segment.cpp  log_transaction.cpp
shared/activity/: activity.cpp  activity_log.cpp  log_segment.cpp  log_transaction.cpp
shared/include/: activity.hpp  activity_log.hpp  common.hpp  crypto.hpp  decode_log.hpp  exceptions.hpp  log_segment.hpp  log_transaction.hpp  log_utility.hpp
shared/include/activity/: activity.hpp  activity_log.hpp  log_segment.hpp  log_transaction.hpp  log_utility.hpp
shared/include/infrastructure/: metaspace_gsn.hpp  net_common.hpp  netnode.hpp  netspace_table.hpp  netspace_url.hpp
shared/include/protocol/: dvsp_packet.hpp  http_frame.hpp  protocol_common.hpp
shared/infrastructure/: metaspace_gsn.cpp  netnode.cpp  netspace_table.cpp  netspace_url.cpp
shared/protocol/: dvsp_packet.cpp  http_frame.cpp
testing/: CMakeLists.txt
testing/nodes/root/: mod_root_protocol.cpp
testing/shared/: mod_activity.cpp  mod_activity_log.cpp  mod_crypto.cpp  mod_dvsp_packet.cpp  mod_free_fn.cpp  mod_metaspace_gsn.cpp  mod_netnode.cpp  mod_netspace_table.cpp  mod_netspace_url.cpp
testing/shared/mocks/: activity_header_m.hpp  activity_log_m.hpp  activity_m.hpp  data.sql  geosub_db.csv  metaspace_schema.sql
